--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@
 
     <string name="cache_size_s">Cache size: %1$s</string>
 
+    <string name="add_to_playlist">Add to playlist</string>
+    <string name="play_next">Play next</string>
+
     <string name="menu_library">Library</string>
     <string name="menu_playlist">Playlist</string>
     <string name="menu_stats">Stats</string>
